website/i18n/ru/docusaurus-plugin-content-docs/version-0.0.28/entry/field-reference.md
---
title: Полный справочник полей
sidebar_position: 10
description: Справочник с возможностью поиска по всем полям ввода и управления Entry Web UI.
---

# Полный справочник полей

Эта страница является каноническим справочником полей конечного пользователя для каждого поля ввода и элемента управления Entry Web UI.

## Как читать этот справочник

Каждое поле содержит:

- **Ключ конфигурации** — ключ, используемый в конфигурационных файлах и CLI
- **Элемент управления** — тип ввода
- **По умолчанию** — безопасное значение по умолчанию
- **Риск** — `normal`, `caution` (предупреждение) или `risky` (рискованно)
- **Примечания** — что делает поле и когда его менять

## Core (Ядро)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `enabled` | переключатель | `true` | risky | Главный выключатель. Отключение останавливает работу Engram. |
| `scope` | выбор | `both` | risky | Направление сохранения: `workspace`, `global`, `both`. |
| `read` | выбор | `auto` | normal | Когда хуки внедряют память: `auto`, `startup`, `always`, `manual`, `off`. |
| `proof` | выбор | `off` | normal | Строка подтверждения хука: `off`, `compact`. |
| `global_path` | текст | пусто | risky | Путь к файловой системе для глобальной памяти. |
| `default_profile` | выбор | пусто | risky | Профиль, используемый, когда ни один не задан явно. |
| `roles` | роли | пусто | normal | Имена ролей через запятую для маршрутизации. |
| `theme` | выбор | `dark` | hidden | Внутреннее/скрытое. Не для пользователя. |

## Load Routing (Маршрутизация загрузки)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `load.limit` | число 1–32 | `8` | normal | Максимум воспоминаний, возвращаемых при обычной загрузке. |

## Memory Limits (Лимиты памяти)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `memory.rule_line_target` | число 50–200, шаг 10 | `70` | normal | Рекомендуемое количество строк для правил. |
| `memory.rule_line_hard_limit` | число 50–200, шаг 10 | `100` | risky | Жесткий лимит строк для правил. |

## Graph (Граф)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `graph.enabled` | переключатель | `true` | normal | Включает маршрутизацию зависимостей/отношений. |
| `graph.max_related` | число 1–20 | `4` | normal | Ограничивает связанные воспоминания из связей графа. |
| `graph.min_related_score` | число 0–1, шаг 0.01 | `0.22` | normal | Мин. показатель схожести для связанных связей. |

## Vector Search (Векторный поиск)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `vector.enabled` | переключатель | `true` | normal | Включает локальную векторную маршрутизацию. |
| `vector.auto_threshold` | число 10–1000 | `100` | normal | Количество воспоминаний для активации векторного поиска. |
| `vector.candidate_pool` | число 8–100 | `24` | normal | Кандидаты, рассматриваемые перед переранжированием. |
| `vector.dimensions` | число 16–512 | `64` | normal | Размерность эмбеддингов; пересборка после изменения. |

## Rule Variants (Варианты правил)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `rule_variants.enabled` | переключатель | `false` | normal | Включает варианты ролей/строгости. |
| `rule_variants.active` | выбор | `balanced` | normal | Активный вариант: `light`, `balanced`, `strict`. |

## Live Sync (Живая синхронизация)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `live_sync.enabled` | переключатель | `false` | normal | Синхронизация файлов контекста агента при сохранении. |

## Global Git (Глобальный Git)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `global_git.enabled` | переключатель | `true` | risky | Включает поведение Git для глобальной памяти. |
| `global_git.remote` | текст | `origin` | risky | Имя удаленного Git-репозитория; без пробелов. |
| `global_git.remote_url` | текст | пусто | risky | Удаленный URL общей глобальной памяти. |
| `global_git.branch` | текст | `main` | risky | Целевая ветка для синхронизации. |
| `global_git.auto_sync` | переключатель | `true` | risky | Автоматическое поведение pull/push. |
| `global_git.auto_resolve` | переключатель | `true` | risky | Автоматическое разрешение конфликтов; просмотр diff. |

## Pattern Mining (Анализ паттернов)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `pattern_mining.enabled` | переключатель | `false` | normal | Экспериментальное извлечение повторяющихся паттернов. |
| `pattern_mining.threshold` | число 1–20 | `3` | normal | Количество повторений перед тем, как паттерн станет значимым. |
| `pattern_mining.lookback_sessions` | число 1–100 | `20` | normal | Последние сессии для проверки. |

## PR Workflow (Рабочий процесс PR)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `pr_workflow.enabled` | переключатель | `false` | risky | Экспериментальный командный рабочий процесс PR. |
| `pr_workflow.target_branch` | текст | `main` | risky | Ветка, получающая PR изменений памяти. |

## Encryption (Шифрование)

| Ключ конфигурации | Элемент управления | По умолчанию | Риск | Примечания |
| --- | --- | --- | --- | --- |
| `encryption.enabled` | переключатель | `false` | risky | Будущий/расширенный режим шифрования. |
| `encryption.scope` | выбор | `global` | risky | Область действия: `workspace`, `global`. |
| `encryption.key_source` | выбор | `portable-file` | risky | Стратегия источника ключа; риск потери резервной копии. |

## Элементы управления, отличные от конфигурационных

См. страницы вкладок для получения информации об элементах управления, не связанных с конфигурацией:

- [Вкладка Connections](connections.md)
- [Вкладка Profiles](profiles.md)
- [Вкладка Workspaces](workspaces.md)
- [Вкладка Core](core.md)
- [Вкладка Memories](memories.md)
- [Вкладка Runtime](runtime.md)

## Следующие шаги

- [Вкладка Construct](construct.md)
- [Руководство по созданию полей](field-authoring-guidelines.md)

<!-- evidence-foundation:v3:start -->
## Память, подкреплённая доказательствами

| Field | Meaning |
| --- | --- |
| `schema_version` | `3` for newly created or updated memories; legacy v1/v2 remain readable. |
| `authority` | `instruction` for rules/skills, `reference` for knowledge. Trace records use `authority: evidence`. |
| `evidence_refs` | Immutable `tr_...` trace IDs supporting the memory. |
| `derived_from` | Session or source identifiers from which the memory was distilled. |
| `revision` | Positive integer incremented when an existing memory is updated. |
| `supersedes` / `superseded_by` | Explicit replacement relationships. |
| `valid_from` / `valid_until` | Time range in which the memory is valid; `valid_until` may be open. |
| `last_confirmed` | Date on which the memory was most recently confirmed. |
<!-- evidence-foundation:v3:end -->

## Git author identity

Engram can store a global author and an optional workspace override. Resolution is workspace, global, then read-only Git fallback. Settings affect future memories only; a workspace override never changes global Git configuration. Use explicit plan and confirmation for global Git sync or legacy-memory migration.

```bash
engram author show
engram author set --name "Jane Doe" --email "jane@example.com"
engram author unset --scope workspace
engram author sync-git-global --plan
engram author sync-git-global --confirm
engram author migrate-memories --plan
engram author migrate-memories --confirm
```

Read the complete [Git author settings guide](../operations/git-author-settings.md).
